# ghost-tail

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.dvc/: config
data/raw/: .gitignore  jazz-piano-midi.dvc  mau.dvc
ghost_tail/: cli.py  logutils.py  main.py  midi.py
ghost_tail/old/: midi_adapter.py  tools.py
notebooks/: Data Preprocessing Playground.ipynb
