[tool.poetry]
name = "ghost-tail"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mido = "^1.3.0"
numpy = "^1.26.2"
dvc = { extras = ["gdrive", "s3", "ssh"], version = "^3.31.2" }
tqdm = "^4.66.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "/home/kureta/.cache/pypoetry/virtualenvs"
venv = "ghost-tail-Yy6Qr63q-py3.11"
