[tool.poetry]
name = "ghost-tail"
version = "0.1.0"
description = ""
authors = ["kureta <skureta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mido = "^1.3.0"
numpy = "^1.26.2"
dvc = { extras = ["gdrive", "s3", "ssh"], version = "^3.31.2" }
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
cysystemd = "^1.6.0"
typer = "^0.9.0"
jupyterlab = "^4.1.5"
nbstripout = "^0.7.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
pre-commit = "^3.6.2"

[tool.poetry.scripts]
preprocess = "ghost_tail.cli:preprocess"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "/home/kureta/.cache/pypoetry/virtualenvs"
venv = "ghost-tail-Yy6Qr63q-py3.11"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
